--- a/V2/css/style.css
+++ b/V2/css/style.css
@@ -43,7 +43,7 @@ color: #FFFFFF;
 /*---header button----*/
 .hero-text .btn-hero{
 margin-top: 20px;
-background: #E13B63;
+background: #162838;
 box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 2px;
 padding: 15px 50px;
@@ -58,13 +58,15 @@ color: #FFFFFF;
 .about-us{
   display: flex;
   align-items: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 40px;
 }
 .about-image {
-width: 100%;
-margin-right: 30px;
+  width: 50%;
+  margin-left: 10%;
 }
 .about-text {
-  width: 30%;
+  width: 40%;
 }
 .about-text h2{
 font-style: normal;
@@ -95,11 +97,11 @@ color: #FFFFFF;
 /* Media Queries */
 @media only screen and (max-width: 540px) {
   .about-us {
-    display: block;
+    flex-direction: column-reverse;
   }
   .about-image {
     width: 100% !important;
-    margin-right: auto;
+    margin-left: auto;
   }
   .about-text {
     width: 70%;
@@ -123,6 +125,6 @@ color: #FFFFFF;
     margin-top: 100px;
   }
   .about-image img {
-    width: 80%;
+    width: 100%;
   }
 }
